ДЗ: Построение REST сервисов на Spring Boot